Fixed alignment issues on lock icon

--- a/src/components/common/screen-lock-indicator/lock-screen-indicator.scss
+++ b/src/components/common/screen-lock-indicator/lock-screen-indicator.scss
@@ -5,6 +5,6 @@
   .lock-icon {
     height: 20px;
     margin-right: 16px;
-    margin-bottom: 5px;
+    margin-bottom: 6px;
   }
 }
